# K1_python_bot

./: .gitignore  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 454deb3a198c_new_property_for_user.py  83116cb6bf02_update_tg_id_property.py  d277b9811193_initial_migraion.py
app/: main.py
app/database/: base.py  database.py  models.py
app/handlers/: admin_commands.py  dialogstate.py  start_menu.py  superadmin_commands.py  user_commands.py
app/keyboards/: admin_keyboard.py  default_menu.py
app/middlewares/: admin.py  db.py  superadmin.py
handlers/: start_menu.py
